--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node web-server/src/app.js",
-    "build": "node web-server/src/app.js"
+    "start": "node web-server/src/app.js"
   },
   "keywords": [],
   "author": "",
