--- a/.github/workflows/main_coates-web-app.yml
+++ b/.github/workflows/main_coates-web-app.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: '16'
 
       - name: npm install, build, and test
         run: |
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./web-server/src/app.js
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
